<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:id="@+id/contact_name"
                android:text="@string/nasim_reza"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/contact_age"
                android:text="@string/age_23"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/contact_mobile"
                android:text="@string/_0170000202"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>